--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "dimadin/purge-cache-for-cloudflare",
-	"description": "Simple full HTML page cache purger for CloudFlare®",
+	"description": "Simple full HTML page cache purger for CloudFlare",
 	"keywords": ["wordpress, cloudflare, cache"],
 	"type": "wordpress-plugin",
 	"homepage": "http://blog.milandinic.com/wordpress/plugins/purge-cache-for-cloudflare/",
